--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <!-- ======= Top Bar ======= -->
   <section id="topbar" class="d-flex align-items-center fixed-top topbar-transparent">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-center justify-content-lg-start">
-      <i class="bi bi-truck d-flex align-items-center"><span>Free Delivery</span></i>
+      <i class="bi bi-truck d-flex align-items-center"><span>Free Delivery in Kour</span></i>
       &nbsp;
       <i class="bi bi-phone d-flex align-items-center"><span>76689092</span></i>
 
