--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
         <a href="https://wa.me/+96176689092" class="google-plus"><i class="bx bxl-whatsapp"></i></a>
       </div>
       <div class="credits">
-        Designed by <a href="">CM</a>
+        Copyright <i style="color: #ffb03b;" ><b>Crepe El Day3a</b> </i> 2022 © by <a id="CM" href="#CM">CM</a>
       </div>
     </div>
   </footer><!-- End Footer -->
