--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
+       <section  id="topbar" class=" align-items-center topbar-transparent">
+           <i class="bi bi-clock align-items-center"><span>Open Hours: &nbsp;</span>Thu-Fri: 16:00-22:00</i>
+           <br>
+           <i class="align-items-center"><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>Sat-Sun: 13:00-23:00</i>
+        </section>
+        
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
