--- a/index.html
+++ b/index.html
@@ -229,42 +229,41 @@
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">10 Pcs</a><span>60.000<sup>LL</sup></span>
+              <a href="#menu">Crepe Rolls 10 Pcs</a><span>60.000<sup>LL</sup></span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">20 Pcs</a><span>110.000<sup>LL</sup></span>
+              <a href="#menu">Crepe Rolls 20 Pcs</a><span>110.000<sup>LL</sup></span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">40 Pcs</a><span>200.000<sup>LL</sup></span>
+              <a href="#menu">Crepe Rolls 40 Pcs</a><span>200.000<sup>LL</sup></span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#">60 Pcs</a><span>300.000<sup>LL</sup></span>
+              <a href="#">Crepe Rolls 60 Pcs</a><span>300.000<sup>LL</sup></span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">80 Pcs</a><span>400.000<sup>LL</sup></span>
+              <a href="#menu">Crepe Rolls 80 Pcs</a><span>400.000<sup>LL</sup></span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">100 Pcs</a><span>500.000<sup>LL</sup></span>
+              <a href="#menu">Crepe Rolls 100 Pcs</a><span>500.000<sup>LL</sup></span>
             </div>
           </div>
-
+          <h6 href="#menu">Order Crepe Rolls before 3H</h6>
         </div>
-
       </div>
     </section><!-- End Menu Section -->
 
@@ -275,7 +274,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
     <div class="container">
-      <h3>Crepe el day3a</h3>
+      <h3>Contact Us</h3>
       <div class="social-links">
         <a href="https://www.instagram.com/crepe_el_day3a/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a href="https://wa.me/+96176689092" class="google-plus"><i class="bx bxl-whatsapp"></i></a>
