--- a/index.html
+++ b/index.html
@@ -229,40 +229,55 @@
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">Crepe Rolls 10 Pcs</a><span>60.000<sup>LL</sup></span>
+              <a href="#menu">10 Pcs</a><span>60.000<sup>LL</sup></span>
+            </div>
+            <div class="menu-ingredients">
+              Crepe Rolls
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">Crepe Rolls 20 Pcs</a><span>110.000<sup>LL</sup></span>
+              <a href="#menu">20 Pcs</a><span>110.000<sup>LL</sup></span>
+            </div>
+            <div class="menu-ingredients">
+              Crepe Rolls
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">Crepe Rolls 40 Pcs</a><span>200.000<sup>LL</sup></span>
+              <a href="#menu">40 Pcs</a><span>200.000<sup>LL</sup></span>
+            </div>
+            <div class="menu-ingredients">
+              Crepe Rolls
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#">Crepe Rolls 60 Pcs</a><span>300.000<sup>LL</sup></span>
+              <a href="#">60 Pcs</a><span>300.000<sup>LL</sup></span>
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">Crepe Rolls 80 Pcs</a><span>400.000<sup>LL</sup></span>
+              <a href="#menu">80 Pcs</a><span>400.000<sup>LL</sup></span>
+            </div>
+            <div class="menu-ingredients">
+              Crepe Rolls
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">Crepe Rolls 100 Pcs</a><span>500.000<sup>LL</sup></span>
+              <a href="#menu">100 Pcs</a><span>500.000<sup>LL</sup></span>
+            </div>
+            <div class="menu-ingredients">
+              Crepe Rolls
             </div>
           </div>
-          <h6 href="#menu">Order Crepe Rolls before 3H</h6>
+          <h6 href="#menu">Order Crepe Rolls before 3h</h6>
         </div>
       </div>
     </section><!-- End Menu Section -->
