--- a/index.html
+++ b/index.html
@@ -229,28 +229,28 @@
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">10 Pcs</a><span>60.000<sup>LL</sup></span>
+              <a href="#menu">15 Pcs</a><span>80.000<sup>LL</sup></span>
             </div>
             <div class="menu-ingredients">
-              Crepe Rolls
+              Crepe Rolls: Oreo, Lotus, Crispy, Strawberry, Banana.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">20 Pcs</a><span>110.000<sup>LL</sup></span>
+              <a href="#menu">30 Pcs</a><span>150.000<sup>LL</sup></span>
             </div>
             <div class="menu-ingredients">
-              Crepe Rolls
+              Crepe Rolls: Oreo, Lotus, Crispy, Strawberry, Banana.
             </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">40 Pcs</a><span>200.000<sup>LL</sup></span>
+              <a href="#menu">45 Pcs</a><span>220.000<sup>LL</sup></span>
             </div>
             <div class="menu-ingredients">
-              Crepe Rolls
+              Crepe Rolls: Oreo, Lotus, Crispy, Strawberry, Banana.
             </div>
           </div>
 
@@ -258,14 +258,17 @@
             <div class="menu-content">
               <a href="#">60 Pcs</a><span>300.000<sup>LL</sup></span>
             </div>
+            <div class="menu-ingredients">
+              Crepe Rolls: Oreo, Lotus, Crispy, Strawberry, Banana.
+            </div>
           </div>
 
           <div class="col-lg-6 menu-item filter-salads">
             <div class="menu-content">
-              <a href="#menu">80 Pcs</a><span>400.000<sup>LL</sup></span>
+              <a href="#menu">75 Pcs</a><span>360.000<sup>LL</sup></span>
             </div>
             <div class="menu-ingredients">
-              Crepe Rolls
+              Crepe Rolls: Oreo, Lotus, Crispy, Strawberry, Banana.
             </div>
           </div>
 
@@ -274,7 +277,7 @@
               <a href="#menu">100 Pcs</a><span>500.000<sup>LL</sup></span>
             </div>
             <div class="menu-ingredients">
-              Crepe Rolls
+              Crepe Rolls: Oreo, Lotus, Crispy, Strawberry, Banana.
             </div>
           </div>
           <h6 href="#menu">Order Crepe Rolls before 3h</h6>
@@ -291,8 +294,10 @@
     <div class="container">
       <h3>Contact Us</h3>
       <div class="social-links">
-        <a href="https://www.instagram.com/crepe_el_day3a/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="https://wa.me/+96176689092" class="google-plus"><i class="bx bxl-whatsapp"></i></a>
+        <a target=”blank” href="https://www.instagram.com/crepe_el_day3a/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a target=”blank” href="https://wa.me/+96176689092" class="google-plus"><i class="bx bxl-whatsapp"></i></a>
+        <a target=”blank” href="https://www.google.com/maps?q=34.2313883,35.7330987&z=17&hl=en" class="google-plus"><i class="bi bi-geo-alt-fill"></i></a>
+        
       </div>
       <div class="credits">
         Copyright <i style="color: #ffb03b;" ><b>Crepe El Day3a</b> </i> 2022 © by <a id="CM" href="#CM">CM</a>
