--- a/index.html
+++ b/index.html
@@ -296,7 +296,9 @@
       <div class="social-links">
         <a target=”blank” href="https://www.instagram.com/crepe_el_day3a/" class="instagram"><i class="bx bxl-instagram"></i></a>
         <a target=”blank” href="https://wa.me/+96176689092" class="google-plus"><i class="bx bxl-whatsapp"></i></a>
+        <a target=”blank” href="tel:96176689092" class="google-plus"><i class="bi bi-phone"></i></a>
         <a target=”blank” href="https://www.google.com/maps?q=34.2313883,35.7330987&z=17&hl=en" class="google-plus"><i class="bi bi-geo-alt-fill"></i></a>
+        
         
       </div>
       <div class="credits">
